Implement auto ria observer service